Fixed: cover-div now has correct z-index
refs #76

--- a/editor/divaEditor.css
+++ b/editor/divaEditor.css
@@ -86,6 +86,7 @@ body{
 }
 #cover-div{
 	position:fixed;
+	z-index: 130;
 }
 #lineQueryOverlay, #resizableOverlay{
 	background-color:rgba(0, 0, 0, 0.5);
